# QOds

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  how_to_build.html  setup_windows_env.bat
app/: CMakeLists.txt  Invoice.cpp  Invoice.hpp  Item.hpp  examples1.cpp  examples1.hpp  examples2.cpp  examples2.hpp  main.cpp  util.cpp  util.hpp
app/test/: ReadCells.cpp  ReadCells.hpp  WriteOut.cpp  WriteOut.hpp  util.hh
app/test/data_files/: multi_textp_cells.ods  random_cell_values.ods
app/tests/: test1.cc  test1.hh
app/tests/files/: multi_textp_cells.ods  random_cell_values.ods
ods/: Attr.cpp  Attr.hpp  Attrs.cpp  Attrs.hpp  Book.cpp  Book.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  CellRef.cpp  CellRef.hpp  Column.cpp  Column.hpp  CompareNumbers.hh  Content.cpp  Content.hpp  Country.cpp  Country.hpp  CurrencyInfo.cpp  CurrencyInfo.hpp  DateInfo.cpp  DateInfo.hpp  DrawFrame.cpp  DrawFrame.hpp  Duration.cpp  Duration.hpp  DurationInfo.hpp  Formula.cpp  Formula.hpp  Manifest.cpp  Manifest.hpp  Meta.cpp  Meta.hpp  Node.cpp  Node.hpp  Ns.cpp  Ns.hpp  Prefix.cpp  Prefix.hpp  Region.cpp  (+35 more)
ods/style/: Border.cpp  Border.hpp  Currency.cpp  Currency.hpp  Date.cpp  Date.hpp  DateProxy.cpp  DateProxy.hpp  Duration.cpp  Duration.hpp  Manager.cpp  Manager.hpp  Percent.cpp  Percent.hpp  StyleFamily.cpp  StyleFamily.hpp  Substyle.cpp  Substyle.hpp  Time.cpp  Time.hpp  decl.hxx  style.hxx  tag.cc
quazip/: CMakeLists.txt
zlib/: gzlib.c  gzread.c  zconf.h
